# rustydj

./: Cargo.toml  README
src/: controller.rs  library.rs  main.rs  mp3playerjack.rs  textui.rs  ui.rs  wsui.rs
web/: index.html  index.js  midi.js  renderWaves.js  style.css  text.html
web/wav_code/: index.html  style.css
